Fix mimetypes with nginx

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -19,9 +19,8 @@
 
         <!-- CSS
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/skeleton.css">
-        <link rel="stylesheet" href="css/calorie.css">
+        <link rel="stylesheet" href="css/normalize.css" type='text/css'>
+        <link rel="stylesheet" href="css/skeleton.css" type='text/css'>
 
 
         <!-- JS
@@ -45,11 +44,11 @@
                 <div class="one-half column" style="margin-top: 5%">
                     <h4>Calorie Find</h4>
                 </div>
-                </div>
+            </div>
                 <form id='food-list'>
                 <div class="row food">
                     <div class="six columns">
-                        <input class="u-full-width food-item" type="text" placeholder="Peanut Butter">
+                        <input class="u-full-width food-item" type="text" placeholder="Butter">
                     </div>
                     <button class='remove-food'>Delete</button>
                 </div>
@@ -66,11 +65,13 @@
                     </div>
                 </div>
                 <div class='row'>
-                    <pre id='results'>
-                        </pre>
-                    </div>
+                    <pre id='results'></pre>
+                </div>
+            </div>
+        </div>
 
-                <!-- End Document
-                –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-            </body>
-        </html>
+
+            <!-- End Document
+            –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        </body>
+    </html>
